fixed misalignment of search box

--- a/elddg/style.css
+++ b/elddg/style.css
@@ -1289,7 +1289,7 @@ border-bottom-right-radius: 3px;
 	color: #EEE;
 
 	width: 350px;
-	height: 23px;
+	height: 25px;
 	padding: 4px 6px 5px 6px;
 	margin: 0;
 
@@ -1306,7 +1306,6 @@ border-bottom-right-radius: 3px;
 	-moz-box-shadow: 0 1px 0px 0 rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 1px 0px 0 rgba(0,0,0,0.2);
 	border: none;
-	margin-top: 1px; /* must add this to correct displacement */
 }
 /* for homepage */
 #hfih {
@@ -1385,7 +1384,7 @@ border-bottom-right-radius: 3px;
 	background: #525252;
 	cursor: pointer;
 
-	height: 34px;
+	height: 32px;
 	margin: 0;
 
 	outline: none;
@@ -1396,7 +1395,7 @@ border-bottom-right-radius: 3px;
 
 	-moz-box-shadow: 0 1px 0px 0 rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 1px 0px 0 rgba(0,0,0,0.2);
-	vertical-align: center;
+	vertical-align: top;
 	text-align: center;
 }
 #hfc:active {
@@ -1404,11 +1403,12 @@ border-bottom-right-radius: 3px;
 	background-position: 5px 8px;
 }
 #hfcb {
+    position: absolute;
     height: 20px;
     width: 20px;
     background-color: #636363;
     border-radius: 17px; /* circle */
-    margin-top: 20%; 
+    margin-top: 5px; 
     text-align: center;
     vertical-align: top;
 }
